--- a/nlw1/aulas/server/package.json
+++ b/nlw1/aulas/server/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "cors": "^2.8.5",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.5"
